--- a/Interface/register.html
+++ b/Interface/register.html
@@ -80,9 +80,14 @@
                                                 <label class="form-label" for="form3Example3c">Topic 1</label>
                                                 <select class="form-select" aria-label="Default select example">
                                                     <option selected>Choose your topics</option>
-                                                    <option value="1">One</option>
-                                                    <option value="2">Two</option>
-                                                    <option value="3">Three</option>
+                                                    <option value="1">Business</option>
+                                                    <option value="2">Cultural</option>
+                                                    <option value="3">Firm</option>
+                                                    <option value="4">Gaming</option>
+                                                    <option value="5">Music</option>
+                                                    <option value="6">Sports</option>
+                                                    <option value="7">Technology</option>
+                                                    <option value="8">Travel</option>
                                                 </select>
                                                 
                                             </div>
@@ -95,9 +100,11 @@
                                                 <label class="form-label" for="form3Example3c">Question 1</label>
                                                 <select class="form-select" aria-label="Default select example">
                                                     <option selected>Choose your question</option>
-                                                    <option value="1">One</option>
-                                                    <option value="2">Two</option>
-                                                    <option value="3">Three</option>
+                                                    <option value="1">Cầu thủ bóng đá mà bạn yêu thích là ai?</option>
+                                                    <option value="2">Câu lạc bộ bóng đá mà bạn yêu thích nhất là CLB nào?</option>
+                                                    <option value="3">Giải đấu bóng đá nào bạn quan tâm theo dõi nhất?</option>
+                                                    <option value="4">Câu nói nào của một vận động viên thể dục/thể thao mà bạn ấn tượng đậm nét nhất?</option>
+                                                    <option value="5">Tên đầy đủ người bạn mà bạn muốn chơi thể thao cùng nhiều nhất?</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -118,9 +125,14 @@
                                                 <label class="form-label" for="form3Example3c">Topic 2</label>
                                                 <select class="form-select" aria-label="Default select example">
                                                     <option selected>Choose your topics</option>
-                                                    <option value="1">One</option>
-                                                    <option value="2">Two</option>
-                                                    <option value="3">Three</option>
+                                                    <option value="1">Business</option>
+                                                    <option value="2">Cultural</option>
+                                                    <option value="3">Firm</option>
+                                                    <option value="4">Gaming</option>
+                                                    <option value="5">Music</option>
+                                                    <option value="6">Sports</option>
+                                                    <option value="7">Technology</option>
+                                                    <option value="8">Travel</option>
                                                 </select>
                                             </div>
 
@@ -133,9 +145,11 @@
                                                 <label class="form-label" for="form3Example3c">Question 2</label>
                                                 <select class="form-select" aria-label="Default select example">
                                                     <option selected>Choose your question</option>
-                                                    <option value="1">One</option>
-                                                    <option value="2">Two</option>
-                                                    <option value="3">Three</option>
+                                                    <option value="1">Bạn yêu thích ca sỹ hay nhóm nhạc nào nhất?</option>
+                                                    <option value="2">Tên bài hát mà bạn yêu thích nhất là?</option>
+                                                    <option value="3">Quê hương của ca sĩ mà bạn yêu thích ở đâu?</option>
+                                                    <option value="4">Câu nói làm bạn cảm thấy tâm đắc nhất của ca sĩ mà bạn hâm mộ?</option>
+                                                    <option value="5">Tên thân mật mà bạn thường dùng để gọi khi nhắc đến ca sỹ mà mình yêu thích là gì?</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -155,9 +169,14 @@
                                                 <label class="form-label" for="form3Example3c">Topic 3</label>
                                                 <select class="form-select" aria-label="Default select example">
                                                     <option selected>Choose your topics</option>
-                                                    <option value="1">One</option>
-                                                    <option value="2">Two</option>
-                                                    <option value="3">Three</option>
+                                                    <option value="1">Business</option>
+                                                    <option value="2">Cultural</option>
+                                                    <option value="3">Firm</option>
+                                                    <option value="4">Gaming</option>
+                                                    <option value="5">Music</option>
+                                                    <option value="6">Sports</option>
+                                                    <option value="7">Technology</option>
+                                                    <option value="8">Travel</option>
                                                 </select>
                                             </div>
 
@@ -170,9 +189,11 @@
                                                 <label class="form-label" for="form3Example3c">Question 3</label>
                                                 <select class="form-select" aria-label="Default select example">
                                                     <option selected>Choose your question</option>
-                                                    <option value="1">One</option>
-                                                    <option value="2">Two</option>
-                                                    <option value="3">Three</option>
+                                                    <option value="1">Thể Loại Game bạn muốn chơi ?</option>
+                                                    <option value="2">Streamer nổi tiếng nào bạn quan tâm ?</option>
+                                                    <option value="3">Game nào theo bạn cuốn hút mọi người ?</option>
+                                                    <option value="4">Tên nhân vật trong game bạn ấn tượng ?</option>
+                                                    <option value="5">Giải đấu game nào bạn đã từng chơi qua?</option>
                                                 </select>
                                             </div>
                                         </div>
