--- a/Interface/login.html
+++ b/Interface/login.html
@@ -42,9 +42,12 @@
                                                 <label class="form-label" for="form3Example3c">Question 1</label>
                                                 <select class="form-select" aria-label="Default select example">
                                                     <option selected>Answer the question</option>
-                                                    <option value="1">One</option>
-                                                    <option value="2">Two</option>
-                                                    <option value="3">Three</option>
+                                                    <option value="1">Cậu bé vàng Maradona</option>
+                                                    <option value="2">En Pulga</option>
+                                                    <option value="3">Kylyan M3p</option>
+                                                    <option value="4">Tài năng trẻ Lngardinho</option>
+                                                    <option value="5">Cầu thủ vĩ đại CR7</option>
+                                                    <option value="6">Không có trong đây</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -55,17 +58,17 @@
                                             <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
 
-                                                <label class="form-label" for="form3Example3c">Question 2</label>
+                                                <label class="form-label" for="form3Example3c">Question 2: Bạn có thích bài "Mơ hồ" không?</label>
                                                 <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                                                     <label class="form-check-label" for="flexCheckDefault">
-                                                      Default checkbox
+                                                        Có
                                                     </label>
                                                   </div>
                                                   <div class="form-check">
                                                     <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
                                                     <label class="form-check-label" for="flexCheckChecked">
-                                                      Checked checkbox
+                                                      Không
                                                     </label>
                                                 </div>
                                             </div>
@@ -75,14 +78,17 @@
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
-                                                <input type="text" id="form3Example3c" class="form-control" />
                                                 <label class="form-label" for="form3Example3c">Answer the
                                                     question</label>
+                                                <br/>
+                                                <label class="form-label" for="form3Example3c">Topic: Gaming</label>
+                                                <input type="text" id="form3Example3c" class="form-control" />
+                                                
                                             </div>
                                         </div>
 
                                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                            <button type="button" class="btn btn-primary btn-lg"> Login </button>
+                                            <button type="button" class="btn btn-primary btn-lg"> <a href="./home.html" text-color="#FFFF">Login</a> </button>
                                         </div>
 
                                     </form>
