--- a/Interface/login.html
+++ b/Interface/login.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="vh-100" style="background-color: #eee;">
+    <section class="vh-100 needs-validation" novalidate style="background-color: #eee;">
         <div class="container h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-lg-12 col-xl-11">
@@ -33,62 +33,15 @@
                                                 <label class="form-label" for="form3Example1c">Username</label>
                                             </div>
                                         </div>
-                                        <!--Chọn toppics 1-->
-
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-
-                                                <label class="form-label" for="form3Example3c">Question 1</label>
-                                                <select class="form-select" aria-label="Default select example">
-                                                    <option selected>Answer the question</option>
-                                                    <option value="1">Cậu bé vàng Maradona</option>
-                                                    <option value="2">En Pulga</option>
-                                                    <option value="3">Kylyan M3p</option>
-                                                    <option value="4">Tài năng trẻ Lngardinho</option>
-                                                    <option value="5">Cầu thủ vĩ đại CR7</option>
-                                                    <option value="6">Không có trong đây</option>
-                                                </select>
-                                            </div>
-                                        </div>
-
-                                        <!--Chọn toppics 2-->
-
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-
-                                                <label class="form-label" for="form3Example3c">Question 2: Bạn có thích bài "Mơ hồ" không?</label>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                    <label class="form-check-label" for="flexCheckDefault">
-                                                        Có
-                                                    </label>
-                                                  </div>
-                                                  <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                                                    <label class="form-check-label" for="flexCheckChecked">
-                                                      Không
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!--Chọn toppics 3-->
-
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <label class="form-label" for="form3Example3c">Answer the
-                                                    question</label>
-                                                <br/>
-                                                <label class="form-label" for="form3Example3c">Topic: Gaming</label>
-                                                <input type="text" id="form3Example3c" class="form-control" />
-                                                
-                                            </div>
-                                        </div>
 
                                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                            <button type="button" class="btn btn-primary btn-lg"> <a href="./home.html" text-color="#FFFF">Login</a> </button>
+                                            <button type="button" class="btn btn-lg"> 
+                                                <a href="./loginPass.html">Next</a> 
+                                            </button>
+                                        </div>
+                                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                            <p>If you don't have account: </p>
+                                            <a href="./register.html"> Register </a>
                                         </div>
 
                                     </form>
